Added iHub links

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
       <a class="link" href="https://twitter.com/natelaclaire" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
+      <a class="link" href="https://join.heliumtrack.app/natelaclaire" target="_blank">
+        <i class="fas fa-link">&nbsp;</i>Join iHub Global
+      </a>
+      <a class="link" href="https://ercfilenow.com/signup/natelaclaire" target="_blank">
+        <i class="fas fa-link">&nbsp;</i>Become an iHub ERC Affiliate
+      </a>
+      <a class="link" href="https://ercfilenow.com/r/natelaclaire" target="_blank">
+        <i class="fas fa-link">&nbsp;</i>Get Help Claiming Your Employee Retention Credit
+      </a>
     </div>
 
     <div id="hashtag">
