Update index.html to include Daily Drop

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       <a class="link" href="https://ercfilenow.com/r/natelaclaire" target="_blank">
         <i class="fas fa-link">&nbsp;</i>Get Help Claiming Your Employee Retention Credit
       </a>
+      <a class="link" href="https://newsletter.dailydrop.com/subscribe?ref=xu1Fhj99h1" target="_blank">
+        <i class="fas fa-plane">&nbsp;</i>The Daily Drop has the best travel hacks!
+      </a>
     </div>
 
     <div id="hashtag">
