--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nate LaClaire | Linktree</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://natelaclaire.dev/assets/nate-photo-2019.jpg" type="image/x-icon" />
+    <link rel="icon" href="https://natelaclaire.me/nate-photo-2019.jpg" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
@@ -22,14 +22,14 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://natelaclaire.dev/assets/nate-photo-2019.jpg" alt="Profile Picture">
+      <img src="https://natelaclaire.me/nate-photo-2019.jpg" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="https://natelaclaire.dev/assets/nate-photo-2019.jpg" target="_blank">
-            <img src="https://natelaclaire.dev/assets/nate-photo-2019.jpg" alt="Profile Picture">
+          <a href="https://natelaclaire.me/nate-photo-2019.jpg" target="_blank">
+            <img src="https://natelaclaire.me/nate-photo-2019.jpg" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
@@ -67,12 +67,6 @@
       </a>
       <a class="link" href="https://join.heliumtrack.app/natelaclaire" target="_blank">
         <i class="fas fa-link">&nbsp;</i>Join iHub Global
-      </a>
-      <a class="link" href="https://ercfilenow.com/signup/natelaclaire" target="_blank">
-        <i class="fas fa-link">&nbsp;</i>Become an iHub ERC Affiliate
-      </a>
-      <a class="link" href="https://ercfilenow.com/r/natelaclaire" target="_blank">
-        <i class="fas fa-link">&nbsp;</i>Get Help Claiming Your Employee Retention Credit
       </a>
       <a class="link" href="https://newsletter.dailydrop.com/subscribe?ref=xu1Fhj99h1" target="_blank">
         <i class="fas fa-plane">&nbsp;</i>The Daily Drop has the best travel hacks!
