--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 <i class="fas fa-chalkboard-teacher"></i>
                 <span>My Teaching</span>
             </a>
+            
+            <a href="nate-laclaire.vcf" class="link-button vcf-button" download>
+                <i class="fas fa-address-card"></i>
+                <span>Add to Contacts</span>
+            </a>
         </div>
 
         <!-- Social Media Section -->
